--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ header {
 }
 
 header img {
-    width: 29rem;
+    width: 27rem;
     height: 100%;
     margin-left: -9rem;
     margin-top: -1rem;
@@ -185,7 +185,7 @@ footer {
 
 footer p {
     margin: 0;
-    color: rgb(2, 45, 112);
+    color: white;
     font-size: 1rem;
 }
 
