--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -24,6 +24,13 @@ main section{
     padding: 0 3rem 0 4rem;
 }
 
+main img {
+    width: 100%;
+    height: 90%;
+    object-fit: contain;
+    margin-top: 7rem;
+}
+
 main ul{
     margin-top: 3rem;
     font-size: 1.3rem;
